--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             }
 
-            .container {
+            .container,
+            .btn {
                 width: 100%;
                 height: 100%;
                 padding-right: 15px;
@@ -24,8 +25,111 @@
                 margin-left: auto;
             }
 
+            .btn {
+                display: block;
+                padding: 0.7em .5em;
+                background: transparent;
+                outline: none;
+                border: 0;
+                color: #d4af37;
+                letter-spacing: 0.1em;
+                font-family: monospace;
+                font-size: 17px;
+                font-weight: bold;
+                cursor: pointer;
+                z-index: 1;
+            }
+
+            .cube {
+                position: relative;
+                transition: all 0.5s;
+            }
+
+            .cube .bg-top {
+                position: absolute;
+                height: 10px;
+                background: #d4af37;
+                bottom: 100%;
+                left: 5px;
+                right: -5px;
+                transform: skew(-45deg, 0);
+                margin: 0;
+                transition: all 0.4s;
+            }
+
+            .cube .bg-top .bg-inner {
+                bottom: 0;
+            }
+
+            .cube .bg {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                top: 0;
+                right: 0;
+                background: #d4af37;
+                transition: all 0.4s;
+            }
+
+            .cube .bg-right {
+                position: absolute;
+                background: #d4af37;
+                top: -5px;
+                z-index: 0;
+                bottom: 5px;
+                width: 10px;
+                left: 100%;
+                transform: skew(0, -45deg);
+                transition: all 0.4s;
+            }
+
+            .cube .bg-right .bg-inner {
+                left: 0;
+            }
+
+            .cube .bg-inner {
+                background: #28282d;
+                position: absolute;
+                left: 2px;
+                right: 2px;
+                top: 2px;
+                bottom: 2px;
+            }
+
+            .cube .text {
+                position: relative;
+                transition: all 0.4s;
+            }
+
+            .cube:hover .bg-inner {
+                background: #d4af37;
+                transition: all 0.4s;
+            }
+
+            .cube:hover .text {
+                color: #28282d;
+                transition: all 0.4s;
+            }
+
+            .cube:hover .bg-right,
+            .cube:hover .bg,
+            .cube:hover .bg-top {
+                background: #28282d;
+            }
+
+            .cube:active {
+                z-index: 9999;
+                animation: bounce 0.1s linear;
+            }
+
+            @keyframes bounce {
+                50% {
+                    transform: scale(0.9);
+                }
+            }
+
             .image {
-                background-image: url("https://spaces.w3schools.com/images/iLNPS0N_6J4.jpg");
+                background-image: url("./logo.png");
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
@@ -54,7 +158,7 @@
 
             .links-container a {
                 width: 100%;
-                color: #414345 !important;
+                color: #d4af37 !important;
                 transition: 0.2s;
             }
 
@@ -149,63 +253,163 @@
             <div class="w3-margin-top" style="text-align: center">
                 <div class="image w3-round"></div>
                 <p class="profession"><span class="w3-padding w3-margin"
-                        style="font-weight: bolder; color: #fdf5e6">Mike<span
+                        style="font-weight: bolder; color: #fdf5e6">Mike <span
                             style="color: #ffcc66">Abramo</span></span>
                 </p>
-                <p class="bio"><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">DEVELOPER
-                        RELATIONS</span></p><br>
+                <p class="bio"><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">BLOCKCHAIN
+                        DEVELOPER
+                    </span></p><br>
             </div>
 
             <!-- Links section 1 -->
             <div class="links-container">
-                <a href="https://blogbytes.eth.limo/" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">Website</a>
-                <a href="#" class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">Projects</a>
-                <a href="#" class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">Blog</a>
-                <a href="#" class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">GitHub</a>
-                <a href="#" class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">Twitter</a>
-                <a href="#" class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">LinkedIn</a>
-                <a href="#" class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">Achievements</a>
 
+                <a href="https://blogbytes.eth.limo/" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">Hover Me</div>
+                </a>
+                <a href="https://aspecta.id/u/SonnyMonroe" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">Web3 Proz</div>
+                </a>
+                <a href="https://medium.com/@mabramo11" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">Blog</div>
+                </a>
+                <a href="https://github.com/SonnyMonroe" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">GitHub</div>
+                </a>
+                <a href="https://twitter.com/SonnyTheDegen" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">Twitter</div>
+                </a>
+                <a href="https://www.linkedin.com/in/michael-abramo/" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">LinkedIn</div>
+                </a>
+                <a href="https://t.me/MikeAbramo" target="_blank" class="btn cube cube-hover"
+                    style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
+                    <div class="bg-top">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg-right">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="bg">
+                        <div class="bg-inner"></div>
+                    </div>
+                    <div class="text">Telegram</div>
+                </a>
+
+                <!-- <a href="https://blogbytes.eth.limo/" class="w3-button w3-sand w3-hover-pale-green link border"
+                    target="_blank">Website</a>
+                <a href="https://aspecta.id/u/SonnyMonroe" class="w3-button w3-sand w3-hover-pale-green link border"
+                    target="_blank">Web 3 Projects</a> 
+                <a href="https://medium.com/@mabramo11" class="w3-button w3-sand w3-hover-pale-green link border"
+                    target="_blank">Blog</a>
+                <a href="https://github.com/SonnyMonroe" class="w3-button w3-sand w3-hover-pale-green link border"
+                    target="_blank">GitHub</a>
+                <a href="https://twitter.com/SonnyTheDegen" class="w3-button w3-sand w3-hover-pale-green link border"
+                    target="_blank">Twitter</a>
+                <a href="https://www.linkedin.com/in/michael-abramo/"
+                    class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">LinkedIn</a>
+                <a href="https://t.me/MikeAbramo" class="w3-button w3-sand w3-hover-pale-green link border"
+                    target="_blank">Telegram</a>
+                -->
             </div>
 
             <!-- Links section 2 -->
             <div class="icons w3-padding">
-                <a href="#" target="_blank">
-                    <i data-feather="facebook"></i>
+                <a href="https://t.me/MikeAbramo" target="_blank">
+                    <i data-feather="send"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://twitter.com/SonnyTheDegen" target="_blank">
                     <i data-feather="twitter"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/michael-abramo/" target="_blank">
                     <i data-feather="linkedin"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://github.com/SonnyMonroe" target="_blank">
                     <i data-feather="github"></i>
                 </a>
             </div><br>
 
             <div class="contact">
                 <p class=""><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">CONTACT
-                        US</span></p>
+                        ME</span></p>
                 <div class="info">
-                    <a href="tel: +6177717171"><span><i data-feather="phone"></i> +6177717171</span></a>
-                    <a href="mailto: email@replacelater.com"><span><i data-feather="mail"></i>
-                            email@replacelater.com</span></a>
+                    <!-- <a href="tel: +6177717171"><span><i data-feather="phone"></i> +6177717171</span></a> -->
+                    <a href="mailto: mabramo11@protonmail.com"><span><i data-feather="mail"></i>
+                            mabramo11@protonmail.com</span></a>
                 </div>
             </div><br>
-            <div class="contact">
+            <!-- <div class="contact">
                 <p class=""><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">FIND
                         US</span></p>
                 <iframe src="https://maps.google.com/maps?q=Boston,+MA&output=embed" width="100%" height="250"
                     frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
+            </div> -->
 
             <footer class="w3-container w3-center w3-padding-48 w3-margin-top">
                 <a class="w3-margin-bottom" href="https://blogbytes.eth.limo"
                     title="Crypto made clear and concise @BlogBytes" target="_blank">
-                    <img style="filter: brightness(1) invert(0);" src="/logo.png"
-                        alt="Crypto made clear and concise @BlogBytes" width="125" height="100">
+                    <!-- <img style="filter: brightness(1) invert(0);" src="/logo.png"
+                        alt="Crypto made clear and concise @BlogBytes" width="125" height="100"> -->
                 </a>
             </footer>
         </div>
