need to get rid of unused css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <title>Links website</title>
+        <title>Mike Abramo LinkTree</title>
         <style>
             body {
                 background: #232526;
@@ -15,8 +15,7 @@
                 /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             }
 
-            .container,
-            .btn {
+            .container {
                 width: 100%;
                 height: 100%;
                 padding-right: 15px;
@@ -144,9 +143,6 @@
                 font-size: large;
             }
 
-            .w3-border {
-                border: 3px solid #ccc !important;
-            }
 
             .links-container {
                 display: flex;
@@ -190,7 +186,7 @@
             }
 
             .border {
-                border: 3px ridge #fdf5e6;
+                border: 3px ridge #d4af37;
             }
 
             .contact {
@@ -260,7 +256,6 @@
                         DEVELOPER
                     </span></p><br>
             </div>
-
             <!-- Links section 1 -->
             <div class="links-container">
 
@@ -372,7 +367,7 @@
                     target="_blank">Telegram</a>
                 -->
             </div>
-
+            <br>
             <!-- Links section 2 -->
             <div class="icons w3-padding">
                 <a href="https://t.me/MikeAbramo" target="_blank">
@@ -388,7 +383,6 @@
                     <i data-feather="github"></i>
                 </a>
             </div><br>
-
             <div class="contact">
                 <p class=""><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">CONTACT
                         ME</span></p>
@@ -398,22 +392,6 @@
                             mabramo11@protonmail.com</span></a>
                 </div>
             </div><br>
-            <!-- <div class="contact">
-                <p class=""><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">FIND
-                        US</span></p>
-                <iframe src="https://maps.google.com/maps?q=Boston,+MA&output=embed" width="100%" height="250"
-                    frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div> -->
-
-            <footer class="w3-container w3-center w3-padding-48 w3-margin-top">
-                <a class="w3-margin-bottom" href="https://blogbytes.eth.limo"
-                    title="Crypto made clear and concise @BlogBytes" target="_blank">
-                    <!-- <img style="filter: brightness(1) invert(0);" src="/logo.png"
-                        alt="Crypto made clear and concise @BlogBytes" width="125" height="100"> -->
-                </a>
-            </footer>
-        </div>
-
         </div>
         <script>
             feather.replace()
