--- a/index.html
+++ b/index.html
@@ -5,240 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <title>Mike Abramo LinkTree</title>
-        <style>
-            body {
-                background: #232526;
-                /* fallback for old browsers */
-                background: -webkit-linear-gradient(to right, #414345, #232526);
-                /* Chrome 10-25, Safari 5.1-6 */
-                background: linear-gradient(to right, #414345, #232526);
-                /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-            }
+        <link rel="stylesheet " href="./styles.css">
 
-            .container {
-                width: 100%;
-                height: 100%;
-                padding-right: 15px;
-                padding-left: 15px;
-                margin-right: auto;
-                margin-left: auto;
-            }
-
-            .btn {
-                display: block;
-                padding: 0.7em .5em;
-                background: transparent;
-                outline: none;
-                border: 0;
-                color: #d4af37;
-                letter-spacing: 0.1em;
-                font-family: monospace;
-                font-size: 17px;
-                font-weight: bold;
-                cursor: pointer;
-                z-index: 1;
-            }
-
-            .cube {
-                position: relative;
-                transition: all 0.5s;
-            }
-
-            .cube .bg-top {
-                position: absolute;
-                height: 10px;
-                background: #d4af37;
-                bottom: 100%;
-                left: 5px;
-                right: -5px;
-                transform: skew(-45deg, 0);
-                margin: 0;
-                transition: all 0.4s;
-            }
-
-            .cube .bg-top .bg-inner {
-                bottom: 0;
-            }
-
-            .cube .bg {
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                top: 0;
-                right: 0;
-                background: #d4af37;
-                transition: all 0.4s;
-            }
-
-            .cube .bg-right {
-                position: absolute;
-                background: #d4af37;
-                top: -5px;
-                z-index: 0;
-                bottom: 5px;
-                width: 10px;
-                left: 100%;
-                transform: skew(0, -45deg);
-                transition: all 0.4s;
-            }
-
-            .cube .bg-right .bg-inner {
-                left: 0;
-            }
-
-            .cube .bg-inner {
-                background: #28282d;
-                position: absolute;
-                left: 2px;
-                right: 2px;
-                top: 2px;
-                bottom: 2px;
-            }
-
-            .cube .text {
-                position: relative;
-                transition: all 0.4s;
-            }
-
-            .cube:hover .bg-inner {
-                background: #d4af37;
-                transition: all 0.4s;
-            }
-
-            .cube:hover .text {
-                color: #28282d;
-                transition: all 0.4s;
-            }
-
-            .cube:hover .bg-right,
-            .cube:hover .bg,
-            .cube:hover .bg-top {
-                background: #28282d;
-            }
-
-            .cube:active {
-                z-index: 9999;
-                animation: bounce 0.1s linear;
-            }
-
-            @keyframes bounce {
-                50% {
-                    transform: scale(0.9);
-                }
-            }
-
-            .image {
-                background-image: url("./logo.png");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center;
-                width: 200px;
-                height: 200px;
-                border-radius: 50%;
-                margin: 0 auto;
-                border: 5px solid #fdf5e6;
-            }
-
-            a {
-                font-size: large;
-            }
-
-
-            .links-container {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                gap: 20px;
-            }
-
-            .links-container a {
-                width: 100%;
-                color: #d4af37 !important;
-                transition: 0.2s;
-            }
-
-            .links-container a:hover {
-                opacity: 1;
-            }
-
-            .profession {
-                margin-top: 15px !important;
-            }
-
-            .profession span {
-                font-size: 14px;
-            }
-
-            .icons {
-                display: flex;
-                justify-content: center;
-                gap: 10px;
-            }
-
-            .icons a {
-                text-decoration: none;
-            }
-
-            .icons a svg {
-                fill: #fdf5e6 !important;
-                transform: scale(1);
-            }
-
-            .border {
-                border: 3px ridge #d4af37;
-            }
-
-            .contact {
-                text-align: center;
-                color: #fdf5e6;
-            }
-
-            .contact .info {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                gap: 15px;
-            }
-
-            .contact .info span {
-                display: flex;
-                align-items: center;
-                gap: 15px;
-            }
-
-            .bio {
-                font-size: 11px;
-                text-align: center;
-            }
-
-            @media screen and (min-width: 768px) {
-                .link {
-                    width: 100%;
-                }
-
-                a {
-                    font-size: x-large;
-                }
-
-            }
-
-            @media screen and (min-width: 576px) {
-                .container {
-                    max-width: 540px;
-                }
-
-                .profession span {
-                    font-size: 24px;
-                }
-
-                .bio {
-                    font-size: 15px;
-                }
-
-            }
-        </style>
         <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
     </head>
     <body>
