--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <title>Mike Abramo LinkTree</title>
         <link rel="stylesheet " href="./styles.css">
-
         <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
     </head>
     <body>
         <!-- Content container -->
         <div class="container">
-
             <!-- Image and name container -->
             <div class="w3-margin-top" style="text-align: center">
                 <div class="image w3-round"></div>
@@ -20,13 +18,13 @@
                         style="font-weight: bolder; color: #fdf5e6">Mike <span
                             style="color: #ffcc66">Abramo</span></span>
                 </p>
-                <p class="bio"><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6">BLOCKCHAIN
+                <p class="bio"><span class="w3-padding w3-margin" style="font-weight: bolder; color: #fdf5e6"><span
+                            style="color: #ffcc66">BLOCKCHAIN</span>
                         DEVELOPER
                     </span></p><br>
             </div>
             <!-- Links section 1 -->
             <div class="links-container">
-
                 <a href="https://blogbytes.eth.limo/" target="_blank" class="btn cube cube-hover"
                     style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
                     <div class="bg-top">
@@ -38,7 +36,7 @@
                     <div class="bg">
                         <div class="bg-inner"></div>
                     </div>
-                    <div class="text">Hover Me</div>
+                    <div class="text">Website</div>
                 </a>
                 <a href="https://aspecta.id/u/SonnyMonroe" target="_blank" class="btn cube cube-hover"
                     style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
@@ -51,7 +49,7 @@
                     <div class="bg">
                         <div class="bg-inner"></div>
                     </div>
-                    <div class="text">Web3 Proz</div>
+                    <div class="text">Web 3 Projects</div>
                 </a>
                 <a href="https://medium.com/@mabramo11" target="_blank" class="btn cube cube-hover"
                     style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
@@ -118,22 +116,6 @@
                     </div>
                     <div class="text">Telegram</div>
                 </a>
-
-                <!-- <a href="https://blogbytes.eth.limo/" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">Website</a>
-                <a href="https://aspecta.id/u/SonnyMonroe" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">Web 3 Projects</a> 
-                <a href="https://medium.com/@mabramo11" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">Blog</a>
-                <a href="https://github.com/SonnyMonroe" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">GitHub</a>
-                <a href="https://twitter.com/SonnyTheDegen" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">Twitter</a>
-                <a href="https://www.linkedin.com/in/michael-abramo/"
-                    class="w3-button w3-sand w3-hover-pale-green link border" target="_blank">LinkedIn</a>
-                <a href="https://t.me/MikeAbramo" class="w3-button w3-sand w3-hover-pale-green link border"
-                    target="_blank">Telegram</a>
-                -->
             </div>
             <br>
             <!-- Links section 2 -->
