--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="text">Website</div>
                 </a>
-                <a href="https://aspecta.id/u/SonnyMonroe" target="_blank" class="btn cube cube-hover"
+                <a href="https://aspecta.ai/u/sonnymonroe" target="_blank" class="btn cube cube-hover"
                     style="background-color: #232526; color: #fff; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
                     <div class="bg-top">
                         <div class="bg-inner"></div>
